// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declared.js [babel-flow] format 1`] = `
"Unexpected token (3:9)
  1 | // @flow
  2 |
> 3 | declare enum E {
    |         ^
  4 |   A,
  5 |   B,
  6 | }
Cause: Unexpected token (3:8)"
`;

exports[`declared.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

declare enum E {
  A,
  B,
}

(E.A: E); // OK
(E.A: empty); // ERROR

declare export enum F {
  N,
  M,
}

(F.N: F); // OK
(F.N: empty); // ERROR

=====================================output=====================================
// @flow

declare enum E {
  A,
  B,
}

(E.A: E); // OK
(E.A: empty); // ERROR

declare export enum F {
  N,
  M,
}

(F.N: F); // OK
(F.N: empty); // ERROR

================================================================================
`;

exports[`lib.js [babel-flow] format 1`] = `
"Unexpected token (4:11)
  2 |
  3 | declare module 'declared-module' {
> 4 |   declare enum G {
    |           ^
  5 |     J,
  6 |     K,
  7 |   }
Cause: Unexpected token (4:10)"
`;

exports[`lib.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

declare module 'declared-module' {
  declare enum G {
    J,
    K,
  }
  declare export enum H {
    X,
    Y,
  }
}

=====================================output=====================================
// @flow

declare module "declared-module" {
  declare enum G {
    J,
    K,
  }
  declare export enum H {
    X,
    Y,
  }
}

================================================================================
`;
